# csci5551-s26-team-pointbot

./: .gitignore  .gitmodules  README.md  clear_build.sh  frames_2026-04-20_17.38.21.gv
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.sh
install/behaviortree_ros2/include/behaviortree_ros2/: bt_executor_parameters.hpp
install/behaviortree_ros2/share/behaviortree_ros2/: local_setup.sh  package.ps1  package.sh
install/btcpp_ros2_interfaces/share/btcpp_ros2_interfaces/: local_setup.sh  package.ps1  package.sh
install/control/share/control/: local_setup.sh  package.ps1  package.sh
install/include/xarm_controller/hardware/: uf_robot_system_hardware.h
install/pointbot_rviz/share/pointbot_rviz/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pointbot_rviz/share/pointbot_rviz/launch/: pointbot_rviz_display.launch.py
install/pointbot_rviz/share/pointbot_rviz/rviz/: pointbot.rviz
install/share/mbot_demo/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/share/pointbot_rviz/: package.bash  package.dsv  package.ps1  package.sh
install/share/realsense_gazebo_plugin/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/uf_ros_lib/: package.dsv  package.ps1  package.sh
install/share/xarm_api/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/xarm_controller/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/xarm_description/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/xarm_gazebo/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/xarm_moveit_config/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/xarm_moveit_servo/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/xarm_msgs/: local_setup.sh  package.sh
install/share/xarm_planner/: package.dsv  package.ps1  package.sh
install/share/xarm_sdk/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/zed_components/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/zed_debug/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/zed_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/share/zed_msgs/: local_setup.sh  package.sh
install/share/zed_ros2/: local_setup.sh  package.dsv  package.ps1  package.sh
install/share/zed_wrapper/: local_setup.sh  package.dsv  package.ps1  package.sh
log/: latest_build  latest_list
src/: calibration_utils.py  checkpoint0.py  checkpoint1.py  cube_detection.py  debug.py  perception_pipeline.py  pointing_system.py  vision_pipeline.py  vision_placeholder.py
src/control/: CMakeLists.txt  package.xml  setup.py
src/control/include/control/: detect_goal_node.hpp  detect_object_node.hpp  log_node.hpp  move_object_node.hpp
src/control/launch/: full_system_launch.py
src/control/src/: control_tree.cpp
src/control/tree/: point_bot_tree.btproj  point_bot_tree.xml
src/lite_6_planner/: package.xml  setup.cfg  setup.py
src/lite_6_planner/launch/: lite_6_planner_launch.py
src/lite_6_planner/lite_6_planner/: planner.py
src/perception/: package.xml  setup.py
src/perception/launch/: perception.launch.py
src/perception/perception/: detect_object_pose.py  perception_action_server.py  pointing_system.py  zed_camera.py  zed_transform.py
src/planning/: package.xml  setup.py
src/planning/planning/: planning_action_server.py
src/point_bot_interfaces/: CMakeLists.txt  package.xml
src/point_bot_interfaces/action/: MoveObject.action  Perception.action
src/point_bot_interfaces/msg/: PerceptionDetection.msg
src/pointbot_rviz/: package.xml  setup.cfg  setup.py
src/pointbot_rviz/launch/: pointbot_rviz.launch.py  pointbot_rviz_display.launch.py
src/pointbot_rviz/pointbot_rviz/: test_visualizer.py  visualization_helpers.py  zed_camera.py  zed_transform.py
src/pointbot_rviz/rviz/: pointbot.rviz
src/utils/: vis_utils.py  zed_camera.py
(+612 files in other folders)
