<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control</name>
  <version>0.0.0</version>
  <description>Launch all required nodes, run the state machine, control the robot, and peform reasoning.</description>
  <maintainer email="yaj00002@umn.edu">adam</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_ros2</depend>
  <depend>point_bot_interfaces</depend>
  <depend>pointbot_rviz</depend>
  <depend>planning</depend>
  <depend>perception</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
