<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>point_bot_interfaces</name>
  <version>0.0.0</version>
  <description>Point Bot Messages</description>
  <maintainer email="hwvxyeej@gmail.com">adam</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- https://docs.ros.org/en/foxy/Tutorials/Beginner-Client-Libraries/Custom-ROS2-Interfaces.html -->
  <!-- https://docs.ros.org/en/foxy/How-To-Guides/Topics-Services-Actions.html -->
  <!-- https://www.behaviortree.dev/docs/tutorial-basics/tutorial_02_basic_ports -->
  <!-- https://docs.ros.org/en/humble/Tutorials/Intermediate/Creating-an-Action.html -->
  <!-- https://docs.ros.org/en/humble/Tutorials/Intermediate/Writing-an-Action-Server-Client/Py.html -->
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>action_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
