<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointbot_rviz</name>
  <version>0.0.0</version>
  <description>Pointbot Rviz2 visualization</description>

  <maintainer email="stang451@umn.edu">Nathan Stangler</maintainer>
  <license>TODO: Add License</license>

  <depend>gz_msgs10</depend>
  <depend>python3-protobuf</depend>
  <depend>xarm_moveit_config</depend>
  <depend>zed_wrapper</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
